[gd_scene load_steps=3 format=2]

[ext_resource path="res://GraphNode.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="GraphNode" type="GraphNode" groups=["graph_nodes"]]
margin_right = 390.0
margin_bottom = 257.0
title = "New node"
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 0.639216, 0.258824, 0.0823529, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 0.639216, 0.258824, 0.0823529, 1 )
script = ExtResource( 1 )
comment_box = NodePath("HBoxContainer/MainColumn/Comment")
main = NodePath("HBoxContainer/MainColumn")
more = NodePath("HBoxContainer/AddColumn")
text = NodePath("HBoxContainer/MainColumn/Text")
display_name = NodePath("HBoxContainer/MainColumn/DisplayName")
node_title = NodePath("HBoxContainer/MainColumn/Title/LineEdit")
character = NodePath("HBoxContainer/MainColumn/Character")
character_drop = NodePath("HBoxContainer/MainColumn/Character/CharacterDrop")
line_asset = NodePath("HBoxContainer/MainColumn/LineAsset")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 574.0
margin_bottom = 188.0
custom_constants/separation = 40

[node name="MainColumn" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 503.0
margin_bottom = 164.0
custom_constants/separation = 10

[node name="Title" type="HBoxContainer" parent="HBoxContainer/MainColumn"]
margin_right = 503.0
margin_bottom = 24.0
custom_constants/separation = 60

[node name="Label" type="Label" parent="HBoxContainer/MainColumn/Title"]
margin_top = 5.0
margin_right = 28.0
margin_bottom = 19.0
text = "Title"

[node name="LineEdit" type="LineEdit" parent="HBoxContainer/MainColumn/Title"]
margin_left = 88.0
margin_right = 146.0
margin_bottom = 24.0

[node name="Character" type="HBoxContainer" parent="HBoxContainer/MainColumn"]
margin_top = 34.0
margin_right = 503.0
margin_bottom = 54.0
custom_constants/separation = 30

[node name="Character" type="Label" parent="HBoxContainer/MainColumn/Character"]
margin_top = 3.0
margin_right = 60.0
margin_bottom = 17.0
text = "Character"

[node name="CharacterDrop" type="OptionButton" parent="HBoxContainer/MainColumn/Character"]
margin_left = 90.0
margin_right = 178.0
margin_bottom = 20.0
text = "Raymond"

[node name="DisplayName" type="HBoxContainer" parent="HBoxContainer/MainColumn"]
visible = false
margin_top = 41.0
margin_right = 314.0
margin_bottom = 96.0
custom_constants/separation = -9

[node name="DisplayName" type="Label" parent="HBoxContainer/MainColumn/DisplayName"]
margin_top = 15.0
margin_right = 122.0
margin_bottom = 40.0
text = "Display Name"

[node name="LineEdit" type="LineEdit" parent="HBoxContainer/MainColumn/DisplayName"]
margin_left = 113.0
margin_right = 221.0
margin_bottom = 55.0

[node name="LineAsset" type="HBoxContainer" parent="HBoxContainer/MainColumn"]
visible = false
margin_top = 41.0
margin_right = 314.0
margin_bottom = 96.0
custom_constants/separation = 65

[node name="LineAsset" type="Label" parent="HBoxContainer/MainColumn/LineAsset"]
margin_top = 15.0
margin_right = 48.0
margin_bottom = 40.0
text = "Asset"

[node name="LineEdit" type="LineEdit" parent="HBoxContainer/MainColumn/LineAsset"]
margin_left = 113.0
margin_right = 233.0
margin_bottom = 55.0
rect_min_size = Vector2( 120, 0 )

[node name="Text" type="HBoxContainer" parent="HBoxContainer/MainColumn"]
margin_top = 64.0
margin_right = 503.0
margin_bottom = 164.0
custom_constants/separation = 76

[node name="Text" type="Label" parent="HBoxContainer/MainColumn/Text"]
margin_top = 43.0
margin_right = 27.0
margin_bottom = 57.0
text = "Text"

[node name="TextEdit" type="TextEdit" parent="HBoxContainer/MainColumn/Text"]
margin_left = 103.0
margin_right = 503.0
margin_bottom = 100.0
rect_min_size = Vector2( 400, 100 )
wrap_enabled = true
caret_blink = true

[node name="Comment" type="HBoxContainer" parent="HBoxContainer/MainColumn"]
visible = false
margin_top = 140.0
margin_right = 503.0
margin_bottom = 190.0
custom_constants/separation = 28

[node name="Comment" type="Label" parent="HBoxContainer/MainColumn/Comment"]
margin_top = 18.0
margin_right = 63.0
margin_bottom = 32.0
text = "Comment"

[node name="Comment2" type="TextEdit" parent="HBoxContainer/MainColumn/Comment"]
margin_left = 91.0
margin_right = 291.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/background_color = Color( 1, 0.933333, 0.694118, 1 )
syntax_highlighting = true
wrap_enabled = true

[node name="AddColumn" type="VBoxContainer" parent="HBoxContainer"]
visible = false
margin_left = 543.0
margin_right = 648.0
margin_bottom = 236.0
grow_horizontal = 2
grow_vertical = 2

[node name="DisplayName" type="Button" parent="HBoxContainer/AddColumn"]
margin_right = 105.0
margin_bottom = 20.0
toggle_mode = true
text = "+DisplayName"

[node name="Options" type="Button" parent="HBoxContainer/AddColumn"]
visible = false
margin_top = 24.0
margin_right = 105.0
margin_bottom = 44.0
toggle_mode = true
text = "Options"

[node name="Text" type="Button" parent="HBoxContainer/AddColumn"]
margin_top = 96.0
margin_right = 105.0
margin_bottom = 116.0
toggle_mode = true
text = "Text"

[node name="Conditional" type="Button" parent="HBoxContainer/AddColumn"]
margin_top = 144.0
margin_right = 105.0
margin_bottom = 164.0
text = "+Conditional"

[node name="LineAsset" type="Button" parent="HBoxContainer/AddColumn"]
margin_top = 192.0
margin_right = 105.0
margin_bottom = 212.0
toggle_mode = true
text = "+LineAsset"

[node name="Comment" type="Button" parent="HBoxContainer/AddColumn"]
margin_top = 216.0
margin_right = 105.0
margin_bottom = 236.0
toggle_mode = true
text = "+Comment"

[node name="More" type="Button" parent="HBoxContainer"]
margin_left = 543.0
margin_right = 558.0
margin_bottom = 164.0
rect_min_size = Vector2( 15, 0 )
mouse_default_cursor_shape = 2
custom_styles/normal = SubResource( 1 )
toggle_mode = true
text = "+"

[connection signal="close_request" from="." to="." method="_on_GraphNode_close_request"]
[connection signal="resize_request" from="." to="." method="_on_GraphNode_resize_request"]
[connection signal="text_changed" from="HBoxContainer/MainColumn/Title/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="toggled" from="HBoxContainer/AddColumn/DisplayName" to="." method="_on_DisplayName_toggled"]
[connection signal="toggled" from="HBoxContainer/AddColumn/Options" to="." method="_on_Options_toggled"]
[connection signal="toggled" from="HBoxContainer/AddColumn/Text" to="." method="_on_Text_toggled"]
[connection signal="pressed" from="HBoxContainer/AddColumn/Conditional" to="." method="_on_Conditional_pressed"]
[connection signal="toggled" from="HBoxContainer/AddColumn/LineAsset" to="." method="_on_LineAsset_toggled"]
[connection signal="toggled" from="HBoxContainer/AddColumn/Comment" to="." method="_on_Comment_toggled"]
[connection signal="toggled" from="HBoxContainer/More" to="." method="_on_More_toggled"]
